--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
           </header>
           <ul>
             <li><a href="{{ '' | absolute_url }}">Homepage</a></li>
-            <li><a href="{{ 'generic.html' | absolute_url }}">Generic</a></li>
+            <li><a href="{{ 'aboutme.html' | absolute_url }}">Generic</a></li>
             <!--
             <li><a href="{{ 'elements.html' | absolute_url }}">Elements</a></li>
             <li>
