--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,16 +2,12 @@
   <section id="banner">
     <div class="content">
       <header>
-        <h1>Hi, I’m Editorial<br />
-        by HTML5 UP</h1>
-        <p>A free and fully responsive site template</p>
+        <h1>Sam Chester<br /></h1>
+        <p>Lamont-Doherty Earth Observatory </p>
       </header>
-      <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-      <ul class="actions">
-        <li><a href="#" class="button big">Learn More</a></li>
-      </ul>
+      <p>This is a website about stuff and things</p>
     </div>
     <span class="image object">
-      <img src="assets/images/pic10.jpg" alt="" />
+      <img src="assets/images/IMG_4436.jpeg" alt="" />
     </span>
   </section>
