--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,9 @@
           <ul>
             <li><a href="{{ '' | absolute_url }}">Homepage</a></li>
             <li><a href="{{ 'aboutme' | absolute_url }}">About Me</a></li>
+            <li><a href="{{ 'Research' | absolute_url }}">Research</a></li>
+            <li><a href="{{ 'Publications' | absolute_url }}">Publications</a></li>
+            <li><a href="{{ 'Fieldwork' | absolute_url }}">Fieldwork</a></li>
             <!--
             <li><a href="{{ 'elements.html' | absolute_url }}">Elements</a></li>
             <li>
