--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,13 @@
       {% if site.pinterest_url %}
       <li><a href="{{ site.pinterest_url }}" class="icon fa-pinterest" target="_blank"><span class="label">Pinterest</span></a></li>
       {% endif %}
+      {% if site.google_scholar_url %}
+      <li>
+        <a href="{{ site.google_scholar_url }}" class="icon fa-graduation-cap" target="_blank">
+          <span class="label">Google Scholar</span>
+        </a>
+      </li>
+      {% endif %}
       {% if site.500px_url %}
       <li><a href="{{ site.500px_url }}" class="icon fa-500px" target="_blank"><span class="label">500px</span></a></li>
       {% endif %}
