--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,7 +49,7 @@
           </ul>
         </nav>
 
-      <!-- Section -->
+      <!-- 
         <section>
           <header class="major">
             <h2>Ante interdum</h2>
@@ -72,16 +72,16 @@
             <li><a href="#" class="button">More</a></li>
           </ul>
         </section>
+        Section -->
 
       <!-- Section -->
         <section>
           <header class="major">
             <h2>Get in touch</h2>
           </header>
-          <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+          <p></p>
           <ul class="contact">
             <li class="fa-envelope-o"><a href="#">{{ site.email }}</a></li>
-            <li class="fa-phone">{{ site.phone }}</li>
             <li class="fa-home">{{ site.street_address }}<br />
             {{ site.city }}, {{ site.state }} {{ site.zip_code }}<br />
             {{ site.country }}</li>
