--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,6 +20,8 @@
             <li><a href="{{ 'Research' | absolute_url }}">Research</a></li>
             <li><a href="{{ 'Publications' | absolute_url }}">Publications</a></li>
             <li><a href="{{ 'Fieldwork' | absolute_url }}">Fieldwork</a></li>
+            <li><a href="{{ '/Media' | absolute_url }}">Media</a></li>
+            <li><a href="{{ '/code' | absolute_url }}">Code</a></li>
             <!--
             <li><a href="{{ 'elements.html' | absolute_url }}">Elements</a></li>
             <li>
